charts/mediaserver/bookorbit/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookorbit
  labels:
    app: bookorbit
    app.kubernetes.io/name: bookorbit
spec:
  selector:
    matchLabels:
      app: bookorbit
      app.kubernetes.io/name: bookorbit
  template:
    metadata:
      labels:
        app: bookorbit
        app.kubernetes.io/name: bookorbit
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: bookorbit
          image: ghcr.io/bookorbit/bookorbit:1.8.0
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          volumeMounts:
            - name: mediaserver-volume
              mountPath: "/books"
              subPath: "media/books"
            - name: mediaserver-volume
              mountPath: "/data"
              subPath: "config/bookorbit"
            - name: mediaserver-volume
              mountPath: "/downloads"
              subPath: "downloads"
      volumes:
        - name: mediaserver-volume
          hostPath:
            path: /mnt/media
