charts/mediaserver/bookorbit/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookorbit
  labels:
    app: bookorbit
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: bookorbit
