charts/mediaserver/bookorbit/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bookorbit
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - bookorbit.int.imdevinc.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: keda-add-ons-http-interceptor-proxy
          namespace: keda
          port: 8080
